style.css
@font-face {
  font-family: "Roboto";
  src: local("Roboto"), url("./fonts/Roboto-Bold.ttf") format("truetype");
  font-weight: bold;
}

@font-face {
  font-family: "Roboto";
  src: local("Roboto"), url("./fonts/Roboto-Regular.ttf") format("truetype");
  font-weight: normal;
}

@font-face {
  font-family: "Roboto";
  src: local("Roboto"), url("./fonts/Roboto-Medium.ttf") format("truetype");
  font-weight:500;
}

@font-face {
  font-family: "Bitter-Regular";
  src: local("Bitter-Regular"),
    url("./fonts/Bitter-Regular.ttf") format("truetype");
  font-weight: 400;
}
@font-face {
  font-family: "Bitter-Bold";
  src: local("Bitter-Bold"), url("./fonts/Bitter-Bold.ttf") format("truetype");
  font-weight: bold;
}

@font-face {
  font-family: "Bitter";
  src: local("Bitter"), url("./fonts/Bitter-Light.ttf") format("truetype");
  font-weight: 300;
}

@font-face {
  font-family: "Bitter";
  src: local("Bitter"), url("./fonts/Bitter-Regular.ttf") format("truetype");
  font-weight: normal;
}

@font-face {
  font-family: "Playfair Display";
  src: local("Playfair Display"),
    url("./fonts/PlayfairDisplay-Medium.ttf") format("truetype");
  font-weight: 500;
}

@font-face {
  font-family: "Playfair Display";
  src: local("Playfair Display"),
    url("./fonts/PlayfairDisplay-Regular.ttf") format("truetype");
  font-weight: normal;
}

/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */

/* Document
   ========================================================================== */

/**
 * 1. Correct the line height in all browsers.
 * 2. Prevent adjustments of font size after orientation changes in iOS.
 */

html {
  line-height: 1.15; /* 1 */
  -webkit-text-size-adjust: 100%; /* 2 */
}

/* Sections
   ========================================================================== */

/**
 * Remove the margin in all browsers.
 */

body {
  margin: 0;
}

/**
 * Render the `main` element consistently in IE.
 */

main {
  display: block;
}

/**
 * Correct the font size and margin on `h1` elements within `section` and
 * `article` contexts in Chrome, Firefox, and Safari.
 */

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

/* Grouping content
   ========================================================================== */

/**
 * 1. Add the correct box sizing in Firefox.
 * 2. Show the overflow in Edge and IE.
 */

hr {
  box-sizing: content-box; /* 1 */
  height: 0; /* 1 */
  overflow: visible; /* 2 */
}

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */

pre {
  font-family: monospace, monospace; /* 1 */
  font-size: 1em; /* 2 */
}

/* Text-level semantics
   ========================================================================== */

/**
 * Remove the gray background on active links in IE 10.
 */

a {
  background-color: transparent;
}

/**
 * 1. Remove the bottom border in Chrome 57-
 * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 */

abbr[title] {
  border-bottom: none; /* 1 */
  text-decoration: underline; /* 2 */
  text-decoration: underline dotted; /* 2 */
}

/**
 * Add the correct font weight in Chrome, Edge, and Safari.
 */

b,
strong {
  font-weight: bolder;
}

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */

code,
kbd,
samp {
  font-family: monospace, monospace; /* 1 */
  font-size: 1em; /* 2 */
}

/**
 * Add the correct font size in all browsers.
 */

small {
  font-size: 80%;
}

/**
 * Prevent `sub` and `sup` elements from affecting the line height in
 * all browsers.
 */

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

/* Embedded content
   ========================================================================== */

/**
 * Remove the border on images inside links in IE 10.
 */

img {
  border-style: none;
}

/* Forms
   ========================================================================== */

/**
 * 1. Change the font styles in all browsers.
 * 2. Remove the margin in Firefox and Safari.
 */

button,
input,
optgroup,
select,
textarea {
  font-family: inherit; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
}

/**
 * Show the overflow in IE.
 * 1. Show the overflow in Edge.
 */

button,
input {
  /* 1 */
  overflow: visible;
}

/**
 * Remove the inheritance of text transform in Edge, Firefox, and IE.
 * 1. Remove the inheritance of text transform in Firefox.
 */

button,
select {
  /* 1 */
  text-transform: none;
}

/**
 * Correct the inability to style clickable types in iOS and Safari.
 */

button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
}

/**
 * Remove the inner border and padding in Firefox.
 */

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

/**
 * Restore the focus styles unset by the previous rule.
 */

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

/**
 * Correct the padding in Firefox.
 */

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */

legend {
  box-sizing: border-box; /* 1 */
  color: inherit; /* 2 */
  display: table; /* 1 */
  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  white-space: normal; /* 1 */
}

/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */

progress {
  vertical-align: baseline;
}

/**
 * Remove the default vertical scrollbar in IE 10+.
 */

textarea {
  overflow: auto;
}

/**
 * 1. Add the correct box sizing in IE 10.
 * 2. Remove the padding in IE 10.
 */

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */

[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  outline-offset: -2px; /* 2 */
}

/**
 * Remove the inner padding in Chrome and Safari on macOS.
 */

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

/* Interactive
   ========================================================================== */

/*
 * Add the correct display in Edge, IE 10+, and Firefox.
 */

details {
  display: block;
}

/*
 * Add the correct display in all browsers.
 */

summary {
  display: list-item;
}

/* Misc
   ========================================================================== */

/**
 * Add the correct display in IE 10+.
 */

template {
  display: none;
}

/**
 * Add the correct display in IE 10.
 */

[hidden] {
  display: none;
}

html {
  font-family: "Roboto", sans-serif;
  /* font-family: 'Playfair Display'; */
  /* font-family: 'Bitter'; */
}

* {
  box-sizing: border-box;
  max-width: 100%;
}

body {
  /* max-width: 1440px; */
}
section,
header {
  width: 100%;
}

.main-header {
  height: 136px;
  /* display: flex; */
  /* align-items: center; */
  /* justify-content: right; */
  padding-right: 20px;
}

.navigation {
  height: 100%;
}

.nav-menu {
  list-style-type: none;
  margin: 0;
  /* display: flex; */
  /* justify-content: right; */
  /* gap: 55px; */
  height: 100%;
  text-align: right;
}

.nav-menu__item {
  display: inline-block;
  position: relative;
  /* margin: 0 auto; */
  top: 50%;
  transform: translateY(-50%);
}

.nav-menu__item:not(:last-of-type) {
  margin-right: 51px;
}

.nav-menu__link {
  font-size: 24px;
  font-weight: 500;
  color: #000000;
  text-decoration: none;
}

.nav-menu__link:hover {
  text-decoration: underline;
}

section.hero {
  height: 630px;
  background: url("./img/hero-background.jpg") no-repeat center/cover;
  position: relative;
}

section.hero .wrapper {
  width: 690px;
  position: absolute;
  top: 135px;
  left: 50%;
  transform: translateX(-50%);
  padding: 110px 67px;
  background-color: #ffffff;
  text-align: center;
}

section.hero .title {
  margin: 0;
  font-family: "Playfair Display";
  font-weight: 500;
  font-size: 86px;
  line-height: 1.2;
  text-align: center;
}

section.hero .description {
  margin-top: 14px;
  font-size: 20px;
  margin-bottom: 0;
}

.section-title {
  font-weight: 700;
  font-size: 24px;
  color: #000000;
}

.section-title--vertical {
  writing-mode: vertical-lr;
  transform-origin: center center;
  transform: rotate(-180deg);
  left: 50%;
  top: 0;
}

section.biography {
  margin-top: 150px;
  max-height: 840px;
  display: flex;
  padding: 0 137px;
  position: relative;
}

.biography-header {
  width: 10%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-items: flex-start;
}

.biography-header > h2 {
  align-self: flex-start;
}

.biography-image {
  order: -1;
  max-width: 50%;
  max-height: 840px;
  flex-grow: 0;
}
.biography-image > img {
  display: block;
  max-height: 100%;
}

.person {
  max-width: 40%;
  justify-content: center;
  display: flex;
  flex-direction: column;
}

.person__name {
  margin-top: 19px;
  font-family: "Playfair Display";
  font-size: 86px;
  font-weight: 500;
  line-height: 1.2;
}

.person-role {
  margin-top: 36px;
}

.person-role,
.person__skill-list {
  font-size: 18px;
  font-weight: 500;
}

.person__skill-list {
  padding: 0;
  margin-top: 0;
  list-style-type: none;
}

.person__skill-item {
  display: inline-block;
}

.person__skill-item:not(:last-of-type)::after {
  margin: 3px;
  display: inline-block;
  content: "/";
}

.rectangle-divider {
  margin-top: 36px;
  width: 20px;
  height: 6px;
  background-color: #0d0d0d;
}

.person__quote {
  margin-left: 0;
  margin-top: 18px;
  font-family: "Bitter-Regular";
  font-size: 26px;
  font-weight: 400;
}

section#designers {
  max-height: 677px;
  margin-top: 151px;
  padding-left: 20px;
}

#designers .section-title {
  position: relative;
  left: 121px;
  display: inline-block;
}

.gallery {
  display: flex;
  gap: 20px;
  flex-wrap: no-wrap;
  overflow: hidden;
}

.gallery__card {
  font-size: 16px;
  height: 520px;
  flex-shrink: 0;
}

.card__footer {
  margin-top: 1.5em;
}

.card__footer > p {
  margin: 0;
}

.card__image {
  display: block;
}

.designer__name {
  text-transform: uppercase;
  font-weight: 900;
}

.designer__from {
  font-weight: 400;
}

.designer__from strong {
  font-weight: bold;
}

